fix: add nowrap in author & pages fields

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main {
     align-self: flex-end;
     border-top: 0.2rem double #563232;
     padding: 0.5rem;
+    text-wrap: nowrap;
 }
 
 .book-author {
